Fix front page cutoff.

--- a/themes/sosnpr/style.css
+++ b/themes/sosnpr/style.css
@@ -1526,7 +1526,7 @@ a:visited {
   background-position: bottom center;
   height: 90vh;
   font-family: "Miriam Libre", sans-serif;
-  padding-top: 20px; }
+  padding-top: 27px; }
   .front-page-hero h1 {
     color: #285817;
     font-family: "Miriam Libre", sans-serif;
@@ -2918,7 +2918,7 @@ a:visited {
       -ms-flex-pack: justify;
           justify-content: space-between;
   background-color: white;
-  min-height: 50px;
+  min-height: 40px;
   -ms-flex-line-pack: center;
       align-content: center;
   -webkit-box-align: center;
